--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
         #time-display {
 			position: relative;
 			font-size: 4rem;
-			font-weight: 200;
+			font-weight: bolder;
 			letter-spacing: 5px;
 			border-radius: 20%;
 			transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
@@ -79,7 +79,7 @@
 		 #time-display::after {
 			content: "";
 			position: absolute;
-			width: 2px;
+			width: 4px;
 			display: block;
 			height: 100%;
 			z-index: 999;
