--- a/style.css
+++ b/style.css
@@ -212,25 +212,30 @@
 		
 		#cat-global-container{
 			position: absolute;
-			width: 420px;
-			height: 360px;
+			width: 330px;
+			height: 250px;
 			bottom: 8%;
 			transition: bottom 0.5s ease-in-out 0.5s;
         }
 		
 		#cat-hitbox,#cat-container {
 			position: absolute;
-			width: 100%;
-			height: 100%;
+			right: 0;
 			margin: auto;
 			bottom: -8px;
         }
 		
         #cat-hitbox {
+			width: 360px;
+			height: 250px;
+			left: -30px;
 			z-index: 30;
         }
 
         #cat-container {
+			width: 100%;
+			height: 100%;
+			left: 0;
 			pointer-events: none; 
 			perspective : 40px;
 			transition: transform 0.1s ease,bottom 0.5s ease-in-out;
@@ -372,7 +377,7 @@
 			position: absolute;
 			bottom: 0%;
 			width: 100%;
-			height: 55%;
+			height: 50%;
 			border-top: 1px solid var(--color-secondary);
 			background-color: #2e2e2e;
 			pointer-events: none;
@@ -397,13 +402,20 @@
 			color:var(--color-secondary);
 		}
 		
-		.sun, .moon {left: 50%;}
+		.sun, .moon {
+			left: 50%;
+			opacity: 0.3;
+			transition: opacity 0.5s ease;
+		}
 
 		.sun {top: 0;}
 
 		.moon {bottom: 0;}
 		
 		.open-page .orbit-wrapper {opacity: 1;}
+		
+		.day .sun{opacity: 1;}
+		.night .moon{opacity: 1;}
 		
 @media only screen and (max-width: 720px) {
 	.orbit-wrapper {
