--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-:root{
+		:root{
 			cursor: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIzMCIgaGVpZ2h0PSIzMCIgdmlld0JveD0iMCAwIDMwIDMwIj4NCiAgPGNpcmNsZSBjeD0iMTUiIGN5PSIxNSIgcj0iMTEiIGZpbGw9IiMwMDAiIHN0cm9rZT0iI2ZmZiIgc3Ryb2tlLXdpZHRoPSIyIiAvPg0KPC9zdmc+DQoNCg0K"), auto;
 		}
 		
@@ -30,6 +30,10 @@
 			background-color: var(--color-bg);
         }
 		
+		svg{display: none;}
+		
+		.ready svg{display: block;}
+		
 		body{
 			user-select: none;
 			pointer-events: none;
@@ -58,37 +62,121 @@
 			justify-content: center;
 			z-index: 50;
 			color: var(--color-secondary);
-			padding: 4px;
         }
 		
 		#time-display,#date-display {
 			background-color: var(--color-primary);
 			padding: 4px;
 			border: 4px solid var(--color-secondary);
+			border-radius: 10px;
         }
 
         #time-display {
 			position: relative;
-			font-size: 4rem;
-			font-weight: bolder;
-			letter-spacing: 5px;
-			border-radius: 20%;
-			transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+			transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
         }
 		
-		 #time-display::after {
-			content: "";
-			position: absolute;
-			width: 4px;
-			display: block;
-			height: 100%;
-			z-index: 999;
-			margin: auto;
-			top: 0;
-			left: 0;
-			right: 0;
-			background: var(--color-secondary);
-        }
+		 .clockHere{
+			  display: flex;
+			  gap: 8px;
+			}
+			.clockHere > div{
+			  min-width: 25px;
+			  display: grid;
+			  grid-template-rows: 50% 50%;
+			}
+			.clockHere > div > div, .clockHere > div{
+			  box-sizing: border-box;
+			}
+			.clockHere > div:nth-child(6), .clockHere > div:nth-child(3){
+			  display: flex !important;
+			  flex-direction: column !important;
+			  gap: 15px;
+			  min-height: 15px;
+			  min-width: 15px !important;
+			}
+			.clockHere > div:nth-child(6) > div, .clockHere > div:nth-child(3) > div{
+			  background: var(--color-secondary);
+			  min-height: 15px;
+			  min-width: 15px;
+			}
+			.num0Here{
+			  border: 9px solid var(--color-secondary);
+			}
+			.num1Here{
+			  border-right: 9px solid var(--color-secondary);
+			}
+			.num2Here > div:first-child{
+			  border: 9px solid var(--color-secondary);
+			  border-bottom: 4px solid var(--color-secondary);
+			  border-left: none;
+			}
+			.num2Here > div:last-child{
+			  border: 9px solid var(--color-secondary);
+			  border-right: none;
+			  border-top: 5px solid var(--color-secondary);
+			}
+			.num3Here > div:first-child{
+			  border: 9px solid var(--color-secondary);
+			  border-left: none;
+			  border-bottom: 4px solid var(--color-secondary);
+			}
+			.num3Here > div:last-child{
+			  border: 9px solid var(--color-secondary);
+			  border-left: none;
+			  border-top: 5px solid var(--color-secondary);
+			}
+			.num4Here > div:first-child{
+			  border: 9px solid var(--color-secondary);
+			  border-top: none;
+			  border-bottom: 4px solid var(--color-secondary);
+			}
+			.num4Here > div:last-child{
+			  border-right: 9px solid var(--color-secondary);
+			  border-left: none;
+			  border-bottom: none;
+			  border-top: 5px solid var(--color-secondary);
+			}
+			.num5Here > div:first-child{
+			  border: 9px solid var(--color-secondary);
+			  border-right: none;
+			  border-bottom: 4px solid var(--color-secondary);
+			}
+			.num5Here > div:last-child{
+			  border: 9px solid var(--color-secondary);
+			  border-left: none;
+			  border-top: 5px solid var(--color-secondary);
+			}
+			.num6Here > div:first-child{
+			  border: 9px solid var(--color-secondary);
+			  border-right: none;
+			  border-bottom: 4px solid var(--color-secondary);
+			}
+			.num6Here > div:last-child{
+			  border: 9px solid var(--color-secondary);
+			  border-top: 5px solid var(--color-secondary);
+			}
+			.num7Here{
+			  border-right: 9px solid var(--color-secondary);
+			  border-top: 9px solid var(--color-secondary);
+			}
+			.num8Here > div:first-child{
+			  border: 9px solid var(--color-secondary);
+			  border-bottom: 4px solid var(--color-secondary);
+			}
+			.num8Here > div:last-child{
+			  border: 9px solid var(--color-secondary);
+			  border-top: 5px solid var(--color-secondary);
+			}
+			.num9Here > div:first-child{
+			  border: 9px solid var(--color-secondary);
+			  border-bottom: 4px solid var(--color-secondary);
+			}
+			.num9Here > div:last-child{
+			  border: 9px solid var(--color-secondary);
+			  border-top: 5px solid var(--color-secondary);
+			  border-left: none;
+			}
 
         #date-display {
 			font-size: 1.4rem;
@@ -96,7 +184,6 @@
 			text-transform: capitalize;
 			margin-top: 4px;
 			border-width: 2px;
-			border-radius: 10px;
 			display: none;
 			opacity: 0;
 			transform: translateY(0px) rotateX(-90deg);
@@ -107,10 +194,7 @@
 		}
 		
         #clock:hover #time-display {
-			font-size: 1.8rem; 
-			transform: translateY(-10px) rotateX(360deg);
-			letter-spacing: 2px;
-			border-width: 2px;
+			transform: translateY(-10px) scale(0.7);
         }
 
         #clock:hover #date-display {
@@ -214,7 +298,7 @@
 			position: absolute;
 			width: 330px;
 			height: 250px;
-			bottom: 8%;
+			bottom: 22%;
 			transition: bottom 0.5s ease-in-out 0.5s;
         }
 		
@@ -247,7 +331,7 @@
         }
 		
 		.open-page #cat-global-container{
-			bottom: 28%;
+			bottom: 30%;
 		}
 		
 		#cat-queut {
