--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@
 			width: 500px;
 			height: 30%;
 			border-top: 1px solid var(--color-primary);
-			border-radius: 20% 20% 0 0;
+			border-radius: 40px 40px 0 0;
 			background-color: var(--color-secondary);
 			z-index: 40;
 			transform-style: preserve-3d;
