--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 		:root{
 			--color-bg : #7c7c7c;
 			--color-primary : #6e6e6e;
@@ -102,6 +103,7 @@
 			  background: var(--color-secondary);
 			  min-height: 15px;
 			  min-width: 15px;
+			  border: 4px solid var(--color-primary);
 			}
 			.num0Here{
 			  border: 9px solid var(--color-secondary);
@@ -182,6 +184,7 @@
 			}
 
         #date-display {
+			padding: .4rem;
 			font-size: 1.4rem;
 			letter-spacing: 2px;
 			text-transform: capitalize;
